fixed Android SDK init bug thanks to @javiroll93, added first TargetVEC code example but not active yet, added some more target examples including dynamic media

--- a/ios/v5mobile/Base.lproj/Main.storyboard
+++ b/ios/v5mobile/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kEH-46-kHW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="kEH-46-kHW">
     <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -115,29 +115,78 @@
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bcw-ly-YvZ">
                                 <rect key="frame" x="10" y="193.33333333333334" width="355" height="30"/>
-                                <state key="normal" title="Send">
+                                <state key="normal" title="Exp Target">
                                     <color key="titleColor" red="0.87059837579727173" green="0.96235173940658569" blue="0.87057727575302124" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
                                     <action selector="requestTarget:" destination="gPh-x9-wtj" eventType="touchUpInside" id="i0Q-sO-xFs"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L3D-Z4-U77">
+                                <rect key="frame" x="10" y="233.33333333333334" width="355" height="30.000000000000028"/>
+                                <state key="normal" title="AB Test">
+                                    <color key="titleColor" red="0.87804710580000001" green="1" blue="0.88986324640000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="requestAbTest:" destination="gPh-x9-wtj" eventType="touchUpInside" id="IZg-lz-NIu"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Wa-Qp-J7c">
+                                <rect key="frame" x="10" y="273.33333333333331" width="355" height="30"/>
+                                <state key="normal" title="Dynamic Media">
+                                    <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleShadowColor" red="0.87804710580000001" green="1" blue="0.88986324640000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="requestDMImage:" destination="gPh-x9-wtj" eventType="touchUpInside" id="tYF-7Q-0dC"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EqN-ZE-AOq">
+                                <rect key="frame" x="10" y="313.33333333333331" width="355" height="30"/>
+                                <accessibility key="accessibilityConfiguration" label="Automated Offer"/>
+                                <state key="normal" title="Get Automated Offer">
+                                    <color key="titleColor" red="0.87804710580000001" green="1" blue="0.88986324640000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="requestAutomatedOffer:" destination="gPh-x9-wtj" eventType="touchUpInside" id="8bq-aC-ZVS"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="W8x-MV-4eh">
+                                <rect key="frame" x="10" y="373.33333333333331" width="355" height="263.99999999999994"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="264" id="5Nx-vM-VF3"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="NGG-4G-0xD" firstAttribute="trailing" secondItem="EqN-ZE-AOq" secondAttribute="trailing" constant="10" id="6Up-8B-cEg"/>
+                            <constraint firstItem="EqN-ZE-AOq" firstAttribute="top" secondItem="L3D-Z4-U77" secondAttribute="bottom" constant="50" id="9W6-r5-wxX"/>
                             <constraint firstItem="NGG-4G-0xD" firstAttribute="trailing" secondItem="v2v-fi-kdg" secondAttribute="trailing" constant="10" id="ABR-1g-fTh"/>
                             <constraint firstItem="bcw-ly-YvZ" firstAttribute="leading" secondItem="NGG-4G-0xD" secondAttribute="leading" constant="10" id="AeZ-uf-pnf"/>
+                            <constraint firstItem="L3D-Z4-U77" firstAttribute="leading" secondItem="NGG-4G-0xD" secondAttribute="leading" constant="10" id="GZk-Y2-gkj"/>
                             <constraint firstItem="NGG-4G-0xD" firstAttribute="trailing" secondItem="s1A-Wm-tCi" secondAttribute="trailing" constant="10" id="JUN-HT-mYE"/>
                             <constraint firstItem="s1A-Wm-tCi" firstAttribute="top" secondItem="NGG-4G-0xD" secondAttribute="top" constant="10" id="Lav-52-lLI"/>
+                            <constraint firstItem="NGG-4G-0xD" firstAttribute="trailing" secondItem="W8x-MV-4eh" secondAttribute="trailing" constant="10" id="NIj-eh-UTs"/>
                             <constraint firstItem="v2v-fi-kdg" firstAttribute="leading" secondItem="NGG-4G-0xD" secondAttribute="leading" constant="10" id="WQk-qJ-gRL"/>
+                            <constraint firstItem="W8x-MV-4eh" firstAttribute="top" secondItem="EqN-ZE-AOq" secondAttribute="bottom" constant="30" id="WRo-Af-hDb"/>
+                            <constraint firstItem="2Wa-Qp-J7c" firstAttribute="top" secondItem="L3D-Z4-U77" secondAttribute="bottom" constant="10" id="WkN-eb-mEe"/>
+                            <constraint firstItem="EqN-ZE-AOq" firstAttribute="leading" secondItem="NGG-4G-0xD" secondAttribute="leading" constant="10" id="aSN-JJ-5SD"/>
+                            <constraint firstItem="NGG-4G-0xD" firstAttribute="trailing" secondItem="2Wa-Qp-J7c" secondAttribute="trailing" constant="10" id="ciy-p2-bYH"/>
                             <constraint firstItem="bcw-ly-YvZ" firstAttribute="top" secondItem="v2v-fi-kdg" secondAttribute="bottom" constant="15" id="dAQ-rl-w1g"/>
                             <constraint firstItem="s1A-Wm-tCi" firstAttribute="leading" secondItem="NGG-4G-0xD" secondAttribute="leading" constant="10" id="de5-Aq-Oq3"/>
                             <constraint firstItem="v2v-fi-kdg" firstAttribute="top" secondItem="s1A-Wm-tCi" secondAttribute="bottom" constant="10" id="ecy-aY-mLh"/>
+                            <constraint firstItem="L3D-Z4-U77" firstAttribute="top" secondItem="bcw-ly-YvZ" secondAttribute="bottom" constant="10" id="ejw-3l-lr8"/>
                             <constraint firstItem="NGG-4G-0xD" firstAttribute="trailing" secondItem="bcw-ly-YvZ" secondAttribute="trailing" constant="10" id="g19-pa-TQz"/>
+                            <constraint firstItem="2Wa-Qp-J7c" firstAttribute="leading" secondItem="NGG-4G-0xD" secondAttribute="leading" constant="10" id="hAT-nY-exj"/>
+                            <constraint firstItem="W8x-MV-4eh" firstAttribute="leading" secondItem="NGG-4G-0xD" secondAttribute="leading" constant="10" id="l1h-YY-bnz"/>
+                            <constraint firstItem="EqN-ZE-AOq" firstAttribute="top" secondItem="2Wa-Qp-J7c" secondAttribute="bottom" constant="10" id="pRb-JA-FIN"/>
+                            <constraint firstItem="NGG-4G-0xD" firstAttribute="trailing" secondItem="L3D-Z4-U77" secondAttribute="trailing" constant="10" id="vhp-fU-fc6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NGG-4G-0xD"/>
                     </view>
                     <connections>
+                        <outlet property="imageView" destination="W8x-MV-4eh" id="GeT-9I-cCV"/>
                         <outlet property="label" destination="s1A-Wm-tCi" id="nLW-HC-x4t"/>
                         <outlet property="textView" destination="v2v-fi-kdg" id="JbH-8W-ed6"/>
                     </connections>
